#51 avoid list collapse inside popup

--- a/src/app/js/popup/components/mode-selector/mode-selector.scss
+++ b/src/app/js/popup/components/mode-selector/mode-selector.scss
@@ -9,6 +9,5 @@
         flex: 1 1 auto;
         overflow-x: hidden;
         overflow-y: auto;
-        @include flex-column();
     }
 }
